# facts-bot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docker-publish-yml.txt  docker-publish.yml  docker-publish.yml.old
benches/: hyper_benchmarks.rs  my_benchmark.rs
docker/: Dockerfile  docker_build_and_run.sh
src/: bot.rs  command_result.rs  context_menu_command.rs  global_slash_command.rs  main.rs
src/commands/: api_ninjas_facts.rs  cat_facts.rs  command_trait.rs  help.rs  mod.rs  number_of_the_day.rs  useless_facts.rs
src/commands/context_menu_commands/: hello_world.rs  mod.rs  user_facts.rs
src/commands/global_slash_commands/: api_ninja_whois_domain.rs  api_ninjas_facts.rs  api_ninjas_trivia.rs  cat_facts.rs  city_statistics.rs  dad_jokes.rs  dictionary.rs  help.rs  hobby.rs  mod.rs  number_of_the_day.rs  random_word.rs  riddle.rs  text_language.rs  thesaurus.rs  urban_dictionary.rs  useless_facts.rs
