[package]
name = "facts-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
reqwest = "0.11.18"
serenity = {version="0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = {version= "1.28.1", features = ["full"]}
