[package]
name = "facts-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
futures = "0.3.28"
hyper-tls = "0.5.0"
itertools = "0.10.5"
once_cell = "1.17.1"
rand = "0.8.5"
reqwest = "0.11.18"
serde = "1.0.163"
serde_json = {version = "1.0.96", feaulres = ["full"]}
serenity = {version="0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = {version= "1.28.1", features = ["full"]}

[dev-dependencies]
criterion =  {version ="0.5.1" , features = ["async_tokio", "async_futures", "futures"] }

#[[bench]]
#name = "my_benchmark"
#harness = false

[[bench]]
name = "hyper_benchmarks"
harness = false
